# hermes-games-skill

./: AGENTS.md  README.md  pyproject.toml  skills.md
plugin/: __init__.py  plugin.yaml
src/hermes_games_mcp/: __init__.py  games_menu.sh  plugin.py  server.py
