[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-games-mcp"
version = "0.1.0"
description = "Hermes plugin: waiting terminal games on each CLI turn."
readme = "README.md"
requires-python = ">=3.10"

[project.entry-points."hermes_agent.plugins"]
waiting-games = "hermes_games_mcp.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_games_mcp"]
